Archive2/bd/0b29ed81d6356e/output
main.cpp:9:5: error: no matching function for call to 'f'
    f("ab");
    ^
main.cpp:5:6: note: candidate template ignored: couldn't infer template argument 'N'
void f(char const[N]);
     ^
1 error generated.
